--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <nav>
         <a id="home" href="#">HOME</a>
         <a id="about" href="#">ABOUT</a>
-        <a id="product" href="#">PRODUCTS</a>
+        <a id="book" href="#">BOOKS</a>
         <a id="contact" href="#">CONTACT</a>
     </nav>
 
     <div id="app">
-        <div class= "home">
+        <!-- <div class= "home"> 
             <h1>My Reading list</h1>
             <div class="hero"></div>
             <div class="text-blurb">
@@ -46,24 +46,95 @@
             </div>
 
             <h3>My Current Top Three Reads</h3>
+            <hr>
 
             <div class="top-three">
                 <div class="preview">
-                    <div class="book-container"></div>
-                    <div class="text-container"></div>
+                    <div class="book-container final-fantasy"></div>
+                    <div class="text-container">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Eaque magni distinctio ullam eum non ea temporibus minus alias 
+                        impedit explicabo, officiis blanditiis? Tempore culpa, magnam 
+                        error, cumque ea assumenda expedita magni, eius blanditiis 
+                        totam maxime!
+                    </div>
                 </div>
                 <div class="preview">
-                    <div class="book-container"></div>
-                    <div class="text-container"></div>
+                    <div class="book-container awakening"></div>
+                    <div class="text-container">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Eaque magni distinctio ullam eum non ea temporibus minus alias 
+                        impedit explicabo, officiis blanditiis? Tempore culpa, magnam 
+                        error, cumque ea assumenda expedita magni, eius blanditiis 
+                        totam maxime!
+                    </div>
                 </div>
                 <div class="preview">
-                    <div class="book-container"></div>
-                    <div class="text-container"></div>
+                    <div class="book-container beatrice"></div>
+                    <div class="text-container">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Eaque magni distinctio ullam eum non ea temporibus minus alias 
+                        impedit explicabo, officiis blanditiis? Tempore culpa, magnam 
+                        error, cumque ea assumenda expedita magni, eius blanditiis 
+                        totam maxime!
+                    </div>
                 </div>
             </div>
+        </div>  -->
+        <div class="contact">
+            <h1>Contact</h1>
+            <p>
+                Like reading a book I have on my list? Have a reccomendation for me?
+                I would love to hear about it, so please reach out and let me know!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ullam 
+                consequuntur nesciunt temporibus vitae atque rem ad totam repudiandae, 
+                asperiores neque laborum laboriosam tenetur laudantium exercitationem 
+                debitis earum recusandae quidem dolores unde a beatae ex! Incidunt 
+                sequi accusamus nostrum quos. Excepturi!
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime 
+                omnis, totam debitis blanditiis odio, ea eveniet pariatur 
+                reprehenderit culpa eos dolores necessitatibus tempore aperiam 
+                facere non ratione officia magnam laboriosam.
+            </p>
+            <div class="contact-form">
+                <form>
+                    <div class="row">
+                        <input type="text" placeholder="Name">
+                    </div>
+                    <div class="row">
+                        <input type="email" placeholder="Email">
+                    </div>
+                    <div class="row">
+                        <textarea name="message" id="" cols="30" rows="10" placeholder="message"></textarea>
+                    </div>
+                </form>
+                <button>Submit</button>
+            </div> 
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis 
+                eaque architecto impedit adipisci, illum corrupti praesentium 
+                possimus error. Nihil explicabo rem velit ipsam dolorem unde! 
+                Maiores, esse.
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis 
+                eaque architecto impedit adipisci, illum corrupti praesentium 
+                possimus error. Nihil explicabo rem velit ipsam dolorem unde! 
+                Maiores, esse. Lorem ipsum dolor sit amet consectetur, adipisicing 
+                elit. Excepturi, fugiat dolorum quibusdam hic nam nobis. Eligendi 
+                a numquam commodi omnis.
+            </p>
+            <p>Please add to my library!</p>
         </div>
-    </div>
-
+    </div> 
+    
+    <footer>
+        &copy;2021 Abril Zaragoza-Palos
+    </footer>
     <script src="lib/jquery-3.6.0.min.js"></script>
     <script src="app/app.js"></script>
 </body>
